examples/test/testpolicy4505.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4505
  namespace: namespace170
spec:
  podSelector:
    matchLabels:
      key21: value34
      key16: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value48
          key16: value49
          key38: value10
      podSelector:
        matchLabels:
          key12: value11
          key37: value35
